# marvel-rivals-analytics

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: .gitkeep
data/raw/: .gitkeep
reports/: .gitkeep
src/marvel_rivals_analytics/: __init__.py  __main__.py  api_client.py  cli.py  raw_saver.py
src/marvel_rivals_analytics/analytics/: __init__.py  maps.py
src/marvel_rivals_analytics/reports/: maps_report.py
src/marvel_rivals_analytics/utils/: config.py  files.py  logging.py
